# termfoto

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-14-darkroom.md  2026-05-15-preview-zoom.md  2026-05-18-image-resolution.md  2026-06-09-chafa-optional.md  2026-06-09-perf-arch-optimization.md  2026-06-09-readme-i18n.md  2026-06-10-i18n.md  2026-06-10-search.md  2026-06-11-readme-redesign.md  2026-06-12-docs-reorg.md  2026-06-12-npm-install.md  2026-06-23-fullscreen-zoom-plan.md
docs/superpowers/specs/: 2026-05-14-terminal-image-viewer-design.md  2026-05-15-preview-zoom-design.md  2026-05-18-image-resolution-design.md  2026-06-09-chafa-optional-design.md  2026-06-09-perf-arch-optimization-design.md  2026-06-09-readme-i18n-design.md  2026-06-10-i18n-design.md  2026-06-10-search-design.md  2026-06-10-slim-design.md  2026-06-11-cli-help-design.md  2026-06-11-readme-redesign.md  2026-06-12-docs-reorg-design.md  2026-06-12-npm-install-design.md  2026-06-23-fullscreen-zoom-design.md
npm/: install.js  package.json  termfoto
src/: app.rs  favorites.rs  lang.rs  lib.rs  main.rs  scanner.rs
src/ui/: browser.rs  grid.rs  layout.rs  mod.rs  preview.rs  search.rs
