[package]
name = "darkroom"
version = "0.1.0"
edition = "2021"
description = "终端图片浏览器——高效、轻量、chafa 渲染"
repository = "https://github.com/boyangso/darkroom"
license = "MIT"
keywords = ["tui", "image", "viewer", "terminal", "chafa"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
default = []
chafa = ["ratatui-image/chafa-dyn", "ratatui-image/image-defaults"]
chafa-static = ["ratatui-image/chafa-static", "ratatui-image/image-defaults"]

[[bin]]
name = "darkroom"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff", "ico"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
