[package]
name = "termfoto"
version = "0.1.0"
edition = "2021"
description = "Fast terminal photo viewer — keyboard-driven, chafa-rendered"
repository = "https://github.com/raconworks/termfoto"
license = "MIT"
keywords = ["tui", "image", "viewer", "terminal", "chafa"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
default = []
chafa = ["ratatui-image/chafa-dyn", "ratatui-image/image-defaults"]
chafa-static = ["ratatui-image/chafa-static", "ratatui-image/image-defaults"]

[[bin]]
name = "termfoto"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
